--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>sale-management</title>
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,400italic,300italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../assets/css/docs.theme.min.css">
+
+    <!-- Owl Stylesheets -->
+    <link rel="stylesheet" href="./assets/owlcarousel/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="./assets/owlcarousel/assets/owl.theme.default.min.css">
+    <script src="./assets/vendors/jquery.min.js"></script>
+    <script src="./assets/owlcarousel/owl.carousel.js"></script>
   </head>
   <body style="box-sizing: border-box;margin: 0;padding: 0">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="./assets/vendors/highlight.js"></script>
+  <script src="./assets/js/app.js"></script>
 </html>
